--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "url": "git://github.com/mnpjs/splendid.git"
   },
   "mnp": {
-    "onCreate": "scripts/mkdir.js"
+    "onCreate": [
+      "yarn",
+      "splendid-dev"
+    ]
   },
   "files": [
     "index.js",
